Renombrado de paquetes

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -37,6 +37,7 @@
 					</div>
 					<div class="card-footer">
 						<button type="submit" value="Guardar" class="btn btn-success">Guardar</button>
+						<a href="/" class="btn btn-secondary">Cancelar</a>
 					</div>
 				</div>
 			</form>
